// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package Streaming;

service StreamService {
  rpc DuplexData (stream DataMessage) returns (stream DataMessage);
  rpc ClientStreamedData (stream DataMessage) returns (DataComplete);
}

message DataMessage {
  bytes data = 1;
  int32 serverDelayMilliseconds = 2;
}

message DataComplete {
  int64 size = 1;
}
